fixed merge issues